Fix : 이미지 관련 수정